--- a/app/src/main/res/drawable/frame_line.xml
+++ b/app/src/main/res/drawable/frame_line.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-
     <stroke
-        android:width="3px"
+        android:width="1.5px"
         android:color="@color/text_black"/>
+    <solid android:color="#00111111"/>
 </shape>
