--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="center"
-        android:padding="8dp"
-        android:text="名稱"/>
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/text_country"
@@ -19,8 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center"
-        android:padding="8dp"
-        android:text="縣市"/>
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/text_PM_value"
@@ -28,8 +26,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center"
-        android:padding="8dp"
-        android:text="PM2.5"/>
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/text_release_time"
@@ -37,6 +34,5 @@
         android:layout_height="match_parent"
         android:layout_weight="4"
         android:gravity="center"
-        android:padding="8dp"
-        android:text="發布時間"/>
+        android:padding="8dp"/>
 </LinearLayout>
